feat: Endpoint Tipo Contrato udistrital/argo_documentacion#122
