# swagger/swagger.yaml
@@ -552,6 +552,49 @@ paths:
         '200':
           description: ''
       tags: *ref_4
+  /plantilla_tipo_contrato/tipo-contrato/{tipo_contrato_id}:
+    get:
+      operationId: PlantillaTipoContratoController_getByTipoContrato
+      parameters:
+        - name: tipo_contrato_id
+          required: true
+          in: path
+          schema:
+            type: number
+      responses:
+        '200':
+          description: ''
+      tags: *ref_4
+    put:
+      operationId: PlantillaTipoContratoController_putTipoContrato
+      parameters:
+        - name: tipo_contrato_id
+          required: true
+          in: path
+          schema:
+            type: number
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePlantillaTipoContratoDto'
+      responses:
+        '200':
+          description: ''
+      tags: *ref_4
+    delete:
+      operationId: PlantillaTipoContratoController_deleteTipoContrato
+      parameters:
+        - name: tipo_contrato_id
+          required: true
+          in: path
+          schema:
+            type: number
+      responses:
+        '200':
+          description: ''
+      tags: *ref_4
 info:
   title: Polizas API CRUD
   description: API
